2005-01-26  Peter Bienstman <Peter.Bienstman@UGent.be>

	* shift.py: New test.

2004-06-03  Peter Bienstman <Peter.Bienstman@UGent.be>

	* planar_VCSEL.py: New test.

2004-04-16  Peter Bienstman <Peter.Bienstman@UGent.be>

	* backward.py: New test.

2003-08-08  Peter Bienstman <Peter.Bienstman@UGent.be>

	* polariton2.py: New test.

2003-08-06  Peter Bienstman <Peter.Bienstman@UGent.be>

	* sudbo.py: New test.

2003-08-01  Peter Bienstman <Peter.Bienstman@UGent.be>

	* slab2.py: New test.
	* stack2.py: Ditto.
	* degenerate2.py: Ditto.
	* grating3.py: Ditto.

2003-02-28  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* field.py: New test.
	* fw_bw.py: Ditto.
	* slab.py: Ditto.

2003-02-05  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* stack1.py: New test.

2003-01-31  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* stack0.py: New test.

2002-10-30  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* coupled.py: New test.

2002-06-06  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* dent.py: New test.

2002-06-05  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* wg.py: New test.

2002-06-04  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* grating2.py: New test.
	* polariton.py: Ditto.
	* Gaussian.py: Ditto.

2002-05-29  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* TEM_field.py: New test.

2002-05-13  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* taper.py: New test.

2002-05-09  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* infstack.py: New test.

2002-05-07  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* precision.py: New test.
	* expression.py: Add more tests.

2002-05-06  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* ADR_test.py: New test.

2002-05-06  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* degenerate.py: New test.

2002-04-30  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* Improve output for all tests.

2002-04-29  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* metal_splitter.py: New test.
	* cladding.py: New test.
	* grating.py: New test.